Add to changelog for 11.1

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Version 11.1 (TBD)
    **• Recent notebooks in file menu
    **• Export all pages wizard
    **• Settings are preserved between versions
+   **• Allow adjustment of file compression level
 
 Version 11.0 (June 30)
    • Easier resizing of images before insertion
