--- a/src/LangPad/Editors/NotebookEditor.resx
+++ b/src/LangPad/Editors/NotebookEditor.resx
@@ -127,25 +127,25 @@
   <data name="PageUpToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAALCSURBVFhH7VU7i1NBFI6VFrqInSgKEl1EZBETZUVctIiN
-        Ie/n5v3YTYogBlKk0T+QIqkE2WCRSjAQQsC/kCKdTUwhaCHKuq7rI1isGb9vOFdkGxPdBBbywcc9d87M
-        Od85M3euaY45DjQKhcJCqVQ6Jq+zRS6Xu5dKpXbS6fR2JpO5I8OzARLeXV1d/ZHNZhWZSCSGeN4W93SB
-        qm+FQqHvqFytra1p0g4Gg1/gW5Zp00Eymbzpcrm+4anQBbW+vq7JLiC5ikajO/Bdl+n7C7T5Rjgc/hqP
-        x3Uyo/0G2QXMUdiaz3haZdn+AImvBgKB7UgkopMwGckuGOQ7OxOLxRS2aAtzl2T5/wF7e8Xtdn+CCB2c
-        AtiBvWRykh1CFxQEf8SayxLm3+D3+5fsdvsWKuL+agEGmejPpKTh41yugfBNFHBJwk0GVHDR4/F8gAhd
-        EdtPMjCCapuJSKlYP40x+jnm9XrfQch5CTsesOgETvt7PHVCtp9kYnCIk/+K44Yojufz+Zf0cZxCSK7x
-        +XzsxFts0/g3JoKaV1ZWfrJ6VsEEtMFhp9N5WCwWXxgVk/SXy+Xn7Xb7EcaHfDc6xXlWq3UXYs5K+L9D
-        KXW8UqlsOJ3OESsgbTabTj4ajS7gGm5SEJOQtDH2FL5FiuBcEaxYSLVafQLfgoQfD1iwTBEMwIAIrJPT
-        hy1oUhQrJGlTgKxbbLVaWoTFYtmt1WqPMTb55YQuHKKIbrf7YDAY5IzkBAXggOoK2WLahgACc839fj/f
-        6/Xuw77GWOKaDCLCDJ6SIQ3cfE0cLF05SRv/hN8CCKw5jfXn5HV/gZuvia+En5gm7b0CpgpcPk2Hw6Er
-        J2mjK7MTgHv/GW5Iha9EkzYEbIh7+qjX6xEcvjeofpPEl/C60Wi4xD194HCdwSELgiEh7ZPing0g4gh4
-        lETywzI8xxwHDSbTL0FhGOI+4ixNAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAALBSURBVFhH7VU7i1NBFI6VFrqInSgKEl1EZJFEZUUMWsTG
+        kPf7/dykWMSFFGn0D6RIKkE2WKQSDIQl4F/YIp1NTCFoIcq6rusjWKwZv284V2QbE00CC/ng4547Z+ac
+        75yZO9c0xxwHGqurqwvlcvmYvM4WxWLxXiaT2c1mszu5XO6ODM8GSHg3Go3+yOfzikylUgM8b4t7ukDV
+        t8Lh8HdUrgqFgibtUCj0Bb5lmTYdpNPpm263+xueCl1QKysrmuwCkqt4PL4L33WZPlmgzTcikcjXZDKp
+        kxntN8guYI7C1nzG86osmwyQ2BIMBndisZhOwmQku2CQ7+xMIpFQ2KJtzF2S5f8H7O0Vj8fzCSJ0cApg
+        B/aTyUl2CF1QEPwRay5LmH9DIBBYcjgc26iI+6sFGGSiP5OSho9zuQbCt1DAJQk3HlDBRa/X+wEidEVs
+        P8nACKptJiKlYv00xujnmM/newch5yXsaMCiEzjt7/HUCdl+konBAU7+K44bojheKpVe0sdxCiG5xu/3
+        sxNvsU2j35gIarbZbD9ZPatgAtrgoNPpPFxbW3thVEzSX6lUnm9sbDzC+IDvRqc4z2q17kHMWQn/dyil
+        jler1XWXyzVkBaTdbtfJh8PhBVzDLQpiEpI2xp7Ct0gRnCuCFQup1WpP4FuQ8KMBC5YpggEYEIF1cvqw
+        BS2KYoUkbQqQdYvtdluLsFgse/V6/THGxr+c0IVDFLG5ufmg3+8XjeQEBeCA6grZYtqGAAJzzb1er9Tt
+        du/DvsZY4hoPIsIMnpIhDdx8LRwsXTlJG/+E3wIIrDmN9efkdbLAzdfCV8JPTJP2fgFTBS6fltPp1JWT
+        tNGV2QnAvf8MN6TCV6JJGwLWxT19NBqNGA7fG1S/ReJLeN1sNt3inj5wuM7gkIXAsJD2SXHPBhBxBDxK
+        IvlhGZ5jjoMGk+kXFlMY3Bae518AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="PageDownToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAKwSURBVFhH7VbJjlJBFKXVdmPauTW67J2J/8CGLfM8jzIo
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAKwSURBVFhH7VbJjlJBFKXVdmPauTW67J2J/8CCNfM8jzIo
         hKFh5YJvcG2MLExc2P4JC0JIIIg40CRIWLHW9zynUtXBaNKoPJJOOMnJq3dv1b3n3lu8YNphhwuLUql0
         WKlUjgqFwlE+n78nzdtBJpOxp1Kp78lkUictFssPvAek23ig6hfpdFrP5XKCXGez2VfSbTwajcZrVMyk
         guxCtVp9J93Go16vtxKJhI5RCHJdq9VOpNt4IFkrHo+L1pNc40JuXkCz2bwUCoXySOCWJgG0uxWNRkXr
@@ -156,41 +156,41 @@
         Cr7KVQH0qz0Uw8oxno/T6TSM5OtXvwqIOJjP535ctAEDrlb5J9KH8YiZ4/3LeDyOI/ktGe7fABHXISKI
         aobyMp0JWSVtvDPcg658HY1GCZy9LcP8HyiCrUQnxg6HQyRSQlRijsnpdLLy0+FwmMKZO/L4ZoBW3pxM
         JhFU98lut4sZMynJNYXhOev1elkkP5THNgvOk3NF9Z9tNptoN0lBsH3rdDp5JDf2zwlE3B0MBmkkPLVa
-        rToJMXMkLyD5fbnNWFAEWv0EF7OLkfTwkXmG5A+leztgq0E36AEfSPN2gU7sk/J1hx0uIkymn/7sHzeN
-        QnF/AAAAAElFTkSuQmCC
+        rToJMXMkLyD5fbnNWFAEWv0EF7OLkfTwkXmG5A+leztgq0E36AEfSPN2gU7sk/J1hx0uIkymn9hwHzSJ
+        fU12AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="AddToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAZnSURBVFhH7ZV7UM15GMZ/61IzrNXYcS1Opagj20UtIRIq
-        19xSqRyy1Sm6qK12O2gHEbG55lJyS6vUoRo5XYg4aJF7LiVddDOzLpvZPxbz7Pf9+Z6dsWftyvpnZzwz
-        z/T2vu/zeb/VTEf4pP+bPusxX9DvLevoaBXdU+a4sr+CTDX1aEY7b1Y/ooYFCJ0HyHWdnBNMskIyJlel
-        lcte5t/ZjDN1B1FWewBUp/0sexmSMalq4jqTTIm/7jjK8Ph/U1+ZYOa0xigzocTveUWrErdfZOHCs0SU
-        PlGg+JcI0aVPYsUezSoeK5FQ4vts/FrDjG4ewiCO+TDps5/EN8Xuxpm6VJQ/S0Zuqz9yWryhbPVh9sVR
-        bvo+hzm7ZZ64U/40GaV1KZiXaltpzH5zHNc+GQXpTpAfdmy48Hgv8lqW4FDjbPzUOAeHm+Yis9kDWc2e
-        bzmzyUOc0c6hxlnIbVmMC637IM9wbCAWx76f+vgK5p67rG+eaU5GRoM39tVPx/4GNxxsmIH0RzNx6NEs
-        8UEZ3FRTj2YH2M5+tr+vbpqYJYbnbuvb9Kd8Q/8XmYQIumNXG+Qcq1qNjFoZUmomI/XhFKTVTsVeBiVw
-        as00qFv3oL7timiqqUezvWxvDzNlUh5MEhnH7q+GQ7x+ltRd0OFn3i2DgI6u0TnTnivrI5B83xk7qlyw
-        q9oVuxlMfAzz1kpnXGsugkZUU49mtEO7O1mGssQ4Wh+J6Jwpzw3kui78zDvkLnQcHd8nL7tagW13XLHl
-        znhsuzsB2+9N/PMxO5mTbo5HRVMhPw+xph7NNEcps5VlRcadSThyPxajVvXJFeKEDvyatrrPE4y9Uy2r
-        D1XLsfHmWCTdcsSm2+OwudJJBBGQHpR4bRyuNKr4eYg19WimOUoZyv7IGMRKZ0zPNJuq7jLBkJ/TVv9A
-        HTeFyuLVtltuWH/dAYk3xmADCxOAQEkMSNCEK2Nw6dEJfh5iTT2a0Y7m6AaWT2ScdddGY/utGYhVDXnV
-        L0BnGj+nLYuYbpHxZTOw/qoT1lSMxNqro7Dm8igU1W5FeXPWn77YlIWWtlp+HmJ9sSnzrR3KxF/mDMZa
-        VzEO8afdII3qtpSf05bV93obE9RuWHXJHisvDcfqyyMQW2aHuqeV/NT7izKUXcUYxCLmGsa2Vuht4Oe0
-        ZRn7xaaVZa6Iu2jHbIsfyu0QU2qD2ie3Ofb9RRnKEmMFYxGT2OyHTOLntGUe1SUqunAMlqvtoFBbY9l5
-        G0SetELRvXRcbzz7lp/+9pifglj/dV50N13MEoNYy89/jSjGlkZ1jeTntGUUpOM+/ajt62XqEYgp+wrf
-        nbVEePFQ+GWbY8FhM2ZzLORWP8zj5yHWmj7t0K7fETMxSwxiLT83AlOVw17ry3Vm83Pa+tJbGOyWbFSz
-        Qu2AyNMW+JZcaoHwEgssLWYuGYoI5lCVBdS1+fw8ewCrqUczcY85vHiImCVGZOkQEHPqFsMH3bwEU35O
-        W/QZbr1cr3DZaUeEn5Qym2PpKSkiGIAgmkeFFkq1fgPU0xwjR7AcZYlBLAVjWin0VOwfUSd+7u/VP7DD
-        XK+9kraoU7YIKRqEkOLBCC0xQxg3AYMLBuNcTS4/D7GmHs00e6EsR9kljBFVaouZycYvDIM6e/Az71ZP
-        d+FzS0V31VLVcIQUmiFIZYLgQlMs5iZgYL4JjlemofXXR6Kppt5iNtPsBbMcZZcwRviJ4WDMgt4+Qld+
-        5p/Vy7eT/eh1vavC2SMCjpvC/7gx+2qMwIKBohflGsH9wADMTH1jqqmnmdPum4wpwlV2cEjo8YCYHP9+
-        Mgjs4O20pf/j0IIRWJRnigXswEJyHn01hG+2BD5HDEVTvYD1aEZ7ZMqEFdjDeZNBq0FwBy+ObYfYJ2Nf
-        9gj7tf1qQvPHQp5vA2+lEbxzJKJ9lG9b06cd2g1hGfu1PesH+Hf2JRantk9yubyXrZ+5n01Mn+uzUyQv
-        IwtcEJxvD5lSCq8jA+GRKRFNNfVoRjtTd/f93Tqm91XbRRYLicFx7ZePj09XBhjs6T9nynC5dIdldN9q
-        1/WStvnpI7FY6YLIfDfRVFPPmc1s2Y59oDSZMpQlBsd9uMLCwvQCAgLMZIHejuMXjQ6yCxy0y2qJJN86
-        TF9NtgmV5NnJB+2c8I2DnHZolzI8/vHl7u7eMS4uTocd6kKmmnp8/EntkCD8AaKReBkqkwfnAAAAAElF
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAZnSURBVFhH7ZV7UM15GMZ/61IzrNXYQRSnUtSR7aKWECmS
+        S5tbKpVDtjpFF7XVbgftoOS27rmU3KpVdKhGThciDlrknktJF93MrMsy+8dinv2+P99jxp61K+ufnfHM
+        PNPb+77P5/1WMx3hk/5v+qzHHMGgt6yjk3VsT5nTsn4KMtXUoxntvF79iBoaJHTuL9d1dk02zQnLmlSd
+        XiF7UXBrI07V70d53T5Qnf6L7EVY1sTq8atMsyWBumMpw+P/TX1kgrlzknF2cmnA08o2JW4+z8G5J2tQ
+        9kiBkl+jRJc9ihd7NKt8qERyqf8Tl5VGWd28hIEc82EyYD+Jf6r9tVP1aah4koK8tkDktvpC2ebH7I/D
+        3PR9LvOh1tniTsXjFJTVp2J2ml2VCfvNcVz7ZByiO05+wKnx3MPdyG9diMymGfi5aSYONM9CdosXclq8
+        33J2s5c4o53MpunIa12Ac217IM9yaiQWx76f9P0FC+8dNtdPtaQgq9EXexq+wd5GD+xvnIqMB9OQ+WC6
+        +KAsbqqpR7N9bGcv299T7y5mieG90+Ym/Slf0/9FpmGC7pgVhrlHqlcgq06G1NpJSLs/Gel1U7CbQQmc
+        VusOddsuNDy7JJpq6tFsN9vbxUyZ1HsTRcaRuyvgmGiQI/UUdPiZd8swqKNbbK77U2VDFFLuumJb9QTs
+        qHHDTgYTH8O8ucoVV1qKoRHV1KMZ7dDudpahLDEON0QjNnfyU0O57gR+5h3yFDqOStTPP1SjwJZbbth0
+        ywVbbo/D1jvj3zxmO/P66y6obC7i5yHW1KOZ5ihlNrOsyLg1EQfvxmPkcv08IUHowK9pq/tswcQ3zaom
+        s0aOddfHYP0NJ2y4ORYbq5xFEAHpQWuujMWlJhU/D7GmHs00RylD2Z8Yg1gZjOmdblvdXSYY8XPa6hes
+        46FQDX655YYHVl91xJpro7GWhQlAoPUMSNDkS6Nx4cExfh5iTT2a0Y7m6FqWX8M4q66MwtYbUxGvkr7s
+        G6Tjzs9pyzKuW3Ri+VSsvuyMpMoRWHl5JJIujkRx3WZUtOS88fnmHLQ+q+PnIdbnm7Pf2qFM4kXOYKxV
+        lWOReNID0phui/g5bVn/oLcuWe2B5RccsOzCMKy4OBzx5faof1zFT72/KEPZ5YxBLGImMbaNQm8tP6ct
+        q/gvNiwrd0PCeXtmO/xYYY+4MlvUPbrJse8vylCWGEsZi5jEZj/ken5OWxYxXWJii0ZjidoeCrUNFp+1
+        RfRxaxTfycDVptNv+fHvD/kpiPVf58W3M8QsMYi15OzXiGFsaUzXaH5OW8YhOp7uh+1eLVYPR1z5V/j+
+        tBUiS4Yg4JAF5h4wZ7bAPG71/Xx+HmKt6dMO7QYcNBezxCDWkjPDMVk59JWBXGcGP6etL32FQR4pxrVL
+        1Y6IPmmJ78hllogstcSiEubSIYhiDldZQl1XwM+zB7CaejQT95gjSwaLWWJElw0GMadsMrrXzUcw4+e0
+        RZ/hNkv0ihafdELkcSmzBRadkCKKAQiieVR4kVTrN0A9zTFyFMtRlhjEUjCmtUJPxf4RdeLn/l79gjvM
+        8tkteRZzwg5hxQMRVjII4aXmiOAmYGjhIJypzePnIdbUo5lmL5zlKLuQMWLK7DAtxeS5UUhnL37m3erp
+        KXxupeiuWqQahrAic4SoTBFaZIYF3AQMLjDF0ap0tP32QDTV1FvAZpq9UJaj7ELGiDw2DIxZ2NtP6MrP
+        /LN6+XdyGLWqd3Uke0TQUTMEHjVhX00QXDhA9Pw8Y3ju649paa9NNfU0c9p9nTFDpMoejsk97hGT499P
+        hsEdfJ039XsYXjgc8/PNMJcdmEfOp69G8D8kgd9BI9FUz2U9mtEemTIRhQ5w3WDYZhjawYdj2yH2ydiH
+        PcJhZd/a8IIxkBfYwldpDN9ciWg/5dvW9GmHdsNYxmFlz4b+gZ39icWp7ZNcLu9lF2ARYBunf3VGquRF
+        dOEEhBY4QKaUwufgAHhlS0RTTT2a0c6UnX3+sInrfdluvuU8YnBc++Xn59eVAQZ5B86cPEwu3WYV26fG
+        bbXk2ZyMEVignIDoAg/RVFPPlc3s2I5DsDSFMpQlBsd9uCIiIvSCgoLMZcG+Ti7zR4XYBw/cYb1QUmAT
+        YaAm24ZL8u3lA7eP+9ZRTju0Sxke//jy9PTsmJCQoMMOdSFTTT0+/qR2SBD+BIJPeBUKDG1NAAAAAElF
         TkSuQmCC
 </value>
   </data>
@@ -229,41 +229,41 @@
   <data name="DuplicateToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAALTSURBVFhH7ZbLTlpRFIZN06SjDpsOOmHApKP2DfoGndD0
-        NQhDnsA3gIloJBESCTKDICIXAQFvYHSkKHJRQEA47Jq2Qnf3v3sO2TGcnn1oh/zJN+Gy1r/W/s+GpYUW
-        eq50Ov0mkUj8yOVy1Czse5Pd3d1Paqn5xIpYTk5OHieTCR2Px9Lg82dnZ4+xWMymlppPkUjEsre3R0aj
-        ER0MBtIoikKPjo6U/2IglUoRFHx4eJjS7/dpu93W5f7+nubzeSUcDn9RS80nGEgmk2Q4HPKmGr1ej1Yq
-        FTShhUJhJiw/Y/bdC3aMheew12OZTOa12kZfMBCPxwmm7na7UzDh+fk5vb6+pk9PT6Zhxr8zIxa1jb5C
-        oZBlZ2eHYGo01eh0OggZLZVKFPnAhmQhhFDkCsOpbfQFA9vb2wRTi2fcarXo6ekpN4CiYj6MQJ7Y8cgb
-        CAaDBFOjqcbd3R0tl8tIOk+9mA8jYBi5MmUAK0dTjdvbW8ruB3p4eMinQihlgWF2QZkzgLU3m80pjUaD
-        Hh8f04ODA15UzIcR2AJyJWXA7/dzA1g7mmrU63U+PR435AMbkgWG2QVFMJzaRl+aAay8VqtNubm5ocVi
-        kd8DKCrmwwhsATVNGcDa0VSjWq3y6bPZLH8qxHwYAcOmDWDtaKqBCwjTawawIVlMGwgEAgRrv7q6moJr
-        eH9/H88zn0rMhxE4BhhAbbWNvtbW1iybm5sEa0dTjcvLSz49+6HiUyGUssCwKQMbGxvfxPPXMoA/HexC
-        4VM9f/9vIE/SBpxO59v19fWG1+vtibDXei6Xi6yurv7CVGI+jIBhaQOqXs7C4/F8Zb8TCvKBUMoCw8iV
-        GQMzxTZhi0ajQ0wl5sMIHANyheNVS80nVsCGDWCl4iVlBD6PDfyzgZWVlc8+n+/n1tbWyCzLy8tjt9v9
-        Ti01n6xW6yuHw/HBbrd/nIP3rMSLP5UWWkjT0tJvpdnEWraE9U8AAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAALPSURBVFhH7ZbLTlpRFIZN06SjDpsOOmHApKP2DfoGndj0
+        NQhDXoBHwAmEaIIkGmAGkTvKRVRECI5U7opcFdg1bYHu7n/3bLJjoOcc2iF/8k24rPWvtf+zYWOttZ7r
+        8PDwTSwW+5FOp6le2Pdm0Wj0k1JqNbEihnw+/zSbzeh0OtUMPl8qlZ5CodCmUmo1BQIBw9HRERmPx/Tx
+        8VEzo9GI5nK50X8xkEgkCAo+PDzMGQwGtN1uL6Xb7dLj4+OR3+//opRaTTAQj8fJcDjkTQX9fp/e3Nyg
+        Cc1mswth+Zmy716xY8w+h70eSiaTr5U2ywUDkUiEYOperzcHE15eXtJKpUInk4lumPHvzIhBabNcPp/P
+        EA6HCaZGU0Gn00HI6MXFBUU+sCGtEEIocoXhlDbLBQPBYJBgavmM7+/vabFY5AZQVM6HGsgTOx7tBjwe
+        D8HUaCpotVq0UCgg6Tz1cj7UgGHkSpcBrBxNBXd3d5TdD/Ts7IxPhVBqBYbZBaXPANZ+e3s7p9ls0vPz
+        c3p6esqLyvlQA1tArjQZcLvd3ADWjqaCRqPBp8fjhnxgQ1qBYXZBEQyntFkuYQArr9frc2q1Gj05OeH3
+        AIrK+VADW0BNXQawdjQVVKtVPn0qleJPhZwPNWBYtwGsHU0FuIAwvTCADWlFt4H9/X2CtZfL5Tm4hjOZ
+        DJ5nPpWcDzVwDDCA2kqb5XI6nYa9vT2CtaOp4Pr6mk/Pfqj4VAilVmBYlwGXy/VNPn+RAfzpYBcKn+r5
+        +38DedJswGKxvN3e3m7u7Oz0ZdhrfZvNRhwOxy9MJedDDRjWbEDRy0Ww5l/Z78QI+UAotQLDyJUeAwvF
+        NrF5cHAwxFRyPtTAMSBXOF6l1GpiBTaxAaxUvqTUwOexgX82YLfbP+/u7v70er1jvVit1unW1tY7pdRq
+        MhqNr8xm8weTyfRxBd6zEi/+VFprLaGNjd+PfcRULQjQ2QAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="RenameToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAOjSURBVFhH7ZZ7SFNxFMfV7Omrtz3do1AyMKG/gvKB1ax8
-        zApmESxthitDqST6p2vQg8CUWgulohhJBa6F22yltbQkk80IlLI0rRxmD7MyV3PzdE67E1tGs671T1/4
-        wr2/e879nHN+v3Hn9V8jKSaa8d23dteuHJFsIbv090Twk2lHmirz1P21BRrruezjlQzD+LCPR1ZO+NGm
-        qsPa/nf6Z2Cv7oI7JUbHuW0nGv9GET7C2byyI0yevVFVC59vdEKXrg06NU/g9nmj47S84DobNyLyiYiI
-        oFHb1Wo1tLS0QJ3qFrSVPIC32lb4VNEBBkbbm7Vik4CN51Q+4eHheoJrNBowm81QXV0NxcXFUHO6At7j
-        Vry8/BiMBRWO7JVbJWwOZ/IODAwsS0hIsFHnzc3NUF5eDjqdDgwGAxhv3oQ6ZSUYFUbHsbRDZjaHM3n7
-        +flpsXt7cnIy5ObmQlFREWi1WqBi9Ho9KBQKYBIYm2LzgXo2hzN5+/v7613wzMxMSExMhLi4OCgsLPy2
-        BUqlEmgyc4JnqdgczkRj17nDY2NjIT4+HmQyGeTn54NUKu0LCwu7wuZwJoIPjN0dnpqaCjExMRAZGfkl
-        NDS0lOKdadzIIzifz7fTwaR4Zxo3IvhlHo/XR3C5XP4DnK5ZuI7inWncyDsgIED9z+Fisfg7uEgkGoAL
-        BAIH/iquUbwzjSMFBQVd/JfwC4PhSUlJA3CJROIO5/ZLNww4feG4heftja7anRNlS0lxHrih4EKh0I7w
-        cgznduyt91bP6Gg/1f6owei4rdlq3bhB1D8EnDq/iuHcwkltDduUX6wWsH3ugN6PD+GuIb13/dqofje4
-        AUN/NXYqjmI8L9JkWjy6/enBBoJbex5DT7cJul9XgqZ0lXV5XIwLPtSBI4gvegx6LGu6prVRaM+KaGtI
-        z7BYymwu+Ps3RnjXWQa1twodUimvb9CBo5cSZAI6AB2I9kf7ocejx6GpgNFoivXskD5v3HnHHf7qxRl4
-        ZJa/3JMTdh9DJqGnsp7M3gehf1YATcCzbcjaskBSotr+oafb/A1uaWVsppp1TVX6pZd2Z89agiEz0cHo
-        6WgqYAqaCpiIdhVAYOras44HK2op3yIQzIWzp6QfTVXieo1q0f6QkLFCfDQHPRtNBcxAuwogOEFpK2jM
-        v68sWaiAz5tkj14295l4zTQpLtE/Vx46BO2CT0NTp9TlnwHdtSNj/ryUlGDqzLVnwx/hfw1bXl5fAfMk
-        JUC5FdIXAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAOiSURBVFhH7ZZ7SFNxFMfV3vnKXvZ0j0LJwIT+CsoHVrPy
+        MSuYRbAeK1wZSiXRP92CigJTai2UimIkFaiLPWyldXMWPdiKSClL08ph9rQyV3PzdE67E1tGs671T1/4
+        wr2/e879nHN+v3Hn918DKSaeGbxz6datuRLFTG7p74ngR9ccqK9kSrtvFmjtp3IOVzEME8A9Hli54Qfr
+        r+7Tdb8zPgWn+S3UlLCuUxuP1P2NIgLEkwW6/QzjrNPchM+X2+CtoRnatI/BfJp1HVcWXOLiBkQBMTEx
+        NGpnWVkZNDY2wm3NVWguuQdv9E3wqbIVTIy+M3vBKhEXz6sCoqOjjQTXarVgtVrBbDZDcXExXD9eCe9x
+        K16UPwK2oNKVs3CDjMvhTf4hISG6lJQUB3Xe0NAAFRUVYDAYwGQyAXvlCtxWVwGrYl2H1uyzcjm8yT8w
+        MFCP3TvT09MhLy8PioqKQK/XAxVjNBpBpVIBk8I4VKv33OFyeJN/UFCQ0QPPysqC1NRUSEpKgsLCwm9b
+        oFargSYzJXyShsvhTTR2gzc8MTERkpOTQaFQQH5+Psjl8q6oqKjzXA5vInjP2L3hmZmZkJCQALGxsV8i
+        IyNLKd6dxo98gguFQicdTIp3p/EjgpcLBIIugiuVyh/gdM3BDRTvTuNH/sHBwWX/HC6VSr+DSySSHrhI
+        JHLhr+IixbvTeFJoaOjZfwk/0xuelpbWA5fJZN5wfr90/YDTF45f+K4d8dXbcuMcGRnuA9cXXCwWOxFe
+        geH8jr3p1uIJrS3HWh7cZ1012g32lSsk3X3AqfMLGM4vnNRcu1H9xW4Dx+dW6Pz4AG6Y1nYuXxrX7QU3
+        Yeivxk7FUYzvRVoss4e0PNlbS3B7xyPoaLdA+6sq0JYuss9PSvDA+zpwBBmMHooexpmuaW0Q2rcimmvX
+        rrfZdA4P/P1rFt616eAGW+iSywVdvQ4cvZQgI9HB6BB0EDoQPQI9HE0FDEFTrG+H9Fndlmve8JfPT8BD
+        q/LF9tyouxgShh7LeTR3H4r+WQE0Ad+2IXvdDFmJZtOHjnbrN7itiXFYri+rrzbOPbctZ9IcDJmIDkeP
+        R1MBY9BUwCi0pwACU9e+ddxbcXOFNpFoKpw8Jv9oqZbe0Wpm7Y6IGCbGR1PQk9FUwAS0pwCCE5S2gsb8
+        +8pWRIqEgjBn/LypT6VLxslxif65CtARaA98HJo6pS7/DOitzeunT8vICKfOPHvW/xH+V7/l5/cVVz4l
+        MpGKV7EAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="ImportToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -292,22 +292,22 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO4SURBVFhH7ZbrT1t1HMa7xfkH8MKQLMoLE9+YmGyZSiDQ
-        jHUZMMWJUOrQDWamxE3NNNGZrKkjXmJiI4lbO9gWyuiFO1R6GC2lHSsphzRlTAMl3Huj7emN6xsMPvLr
+        jHUZMMWJUOrQDWamxE3NNNGZrKksXmJiI4lbO9gWyuiFO1R6GC2lHSsphzRlTAMl3Huj7emN6xsMPvLr
         jnshh9pD95In+eTknJzzPM/3dy45gn3t67+SyWQHxeKqo2JxtehZ8Z7k3Kus/f9LIrlwTKFolLvdvpHF
-        xUU6bdxuu+z6Tz9WVFx8mY1IrjLJ+UKv1ze6tbWFzc3NtCE+zrHHvRJJ9ZtsRHKRAna7Q7exsYG1tbW0
-        IT7d+j6lWHw+m41ILlLAZqN16+vrWF1d5UUkFodCP4wFX/DpMeLT3WNQ8Crw4IFdRy5eXl7mhT/IoPKG
-        Hh83UHC65hPHiE9n9x4KrKysIB6P88IXCKFSSeE67YFEQaHHNp4osacCxDAajfLC4w+g4iaFX10rqB1j
-        UHrbAoVhBNr2rls8CwxrY7EYIpEIJzqrE1dU5h180WhCUR0F6fgyPh2N4aozhpImO4qk9WMnSi+K2Ijk
-        elLApiVBDMNw8p3OimLdn6js9+zg3OASPqPjKLNEcHYoiksjcQjV1q2sT34bEIg+f4mN2V2kgMVi04bD
-        YYRCIU5kWivebp/B+6YIyvu5eacvnODd+2F8aI4mzs/6UvXwUOG3r7FR3CIFBgaGtGTSQCDAibR5EIXq
-        aZT3hlH6Ozenu5kEJT0MJFQYolrj3y9eVlmfL7r6ChvFrScrMKQJBoPw+/2cXLtnxhtyGvnKP3ZQcGcK
-        ZV1hnGoJ4XTb9oPYFUKWnP7rcJVcLzj51QtszO4iBcxmq4ZM6vP5OKGGH6Gu8+FT5K0W/KwxoVZFQSjr
-        xBkdg2INg7fUAeT+MIhTXyvowrJqIRuRXKSA0WjRkEk9Hk9KzM3NYXJyEvZRB45L23HmHoOTt9zIk/Wi
-        rtWEu01qfq+h0WjWkEndbndKzM/PY2pqCrTDiePXOpD3iwsnpB1ouz+E2dlZNDW38PsQ9fUZNWSyhYWF
-        lJmenoZjbBz537Si/PsOmG00JiYmEuXU2vabvAv8O1mqkNswMelCnbYfjkeP4XK5EqWIj6q55QavAgaD
-        SU2mIsvHl5mZmUQw2ZL97Z+SvRUgUxGTdCGDqFQ6fgW2vwNdS0tL8Hq9aUN82jr0d1P9IzqYny8qrvqo
-        prGhQWVQKhuM6VJff4c6+8GF27m5opRW4EBmZmbW0dezxTl5BTXZOcIr6ZKTU1Bz5MixkoyMjMNsRko6
-        IBQKn9veHnoGEJ997WsXCQT/AH4cQEF2fduwAAAAAElFTkSuQmCC
+        xUU6bdxuu6z2px8rKi6+zEYkV5nkfKHX6xvd2trC5uZm2hAf59jjXomk+k02IrlIAbvdodvY2MDa2lra
+        EJ9ufZ9SLD6fzUYkFylgs9G69fV1rK6u8iISi0OhH8aCL/j0GPHp7jEoeBV48MCuIxcvLy/zwh9kUHlD
+        j48bKDhd84ljxKezew8FVlZWEI/HeeELhFCppFBLeyBRUOixjSdK7KkAMYxGo7zw+AOouEnhV9cKro8x
+        KL1tgcIwAm171y2eBYa1sVgMkUiEE53ViSsq8w6+aDShqI6CdHwZn47GcNUZQ0mTHUXS+rETpRdFbERy
+        PSlg05IghmE4+U5nRbHuT1T2e3ZwbnAJn9FxlFkiODsUxaWROIRq61bWJ78NCESfv8TG7C5SwGKxacPh
+        MEKhECcyrRVvt8/gfVME5f3cvNMXTvDu/TA+NEcT52d9qXp4qPDb19gobpECAwNDWjJpIBDgRNo8iEL1
+        NMp7wyj9nZvT3UyCkh4GEioMUW3/3y9eVlmfL7r6ChvFrScrMKQJBoPw+/2cXLtnxhtyGvnKP3ZQcGcK
+        ZV1hnGoJ4XTb9oPYFUKWnP7rcJVcLzj51QtszO4iBcxmq4ZM6vP5OKGGH6Gu8+FT5K0W/Kwx4bqKglDW
+        iTM6BsUaBm+pA8j9YRCnvlbQhWXVQjYiuUgBo9GiIZN6PJ6UmJubw+TkJOyjDhyXtuPMPQYnb7mRJ+tF
+        XasJd5vU/F5Do9GsIZO63e6UmJ+fx9TUFGiHE8evdSDvFxdOSDvQdn8Is7OzaGpu4fch6uszashkCwsL
+        KTM9PQ3H2Djyv2lF+fcdMNtoTExMJMqpte03eRf4d7JUIbdhYtKFOm0/HI8ew+VyJUoRH1Vzyw1eBQwG
+        k5pMRZaPLzMzM4lgsiX72z8leytApiIm6UIGUal0/Apsfwe6lpaW4PV604b4tHXo76b6R3QwP19UXPVR
+        TWNDg8qgVDYY06W+/g519oMLt3NzRSmtwIHMzMyso69ni3PyCmqyc4RX0iUnp6DmyJFjJRkZGYfZjJR0
+        QCgUPre9PfQMID772tcuEgj+AW3PQD8Qdhd+AAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
