--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,13 +13,13 @@ Version 11.1 (TBD)
    **• Settings are preserved between versions
    **• Allow adjustment of file compression level
 
-Version 11.0 (June 30)
+Version 11.0 (June 30, 2020)
    • Easier resizing of images before insertion
    • Pressing CTRL+S on character editor and dictionary now saves the notebook
    • Display shortcut keys on menus
    • Added tons of shortcut keys to make all across the program
    • Custom characters can be assigned to keys CTRL+1 to CTRL+0
-   **• Character insertion now respects caps lock
+   • Character insertion now respects caps lock
    • Allow the adjustment of bullet indent
    • Support hanging indent
    • Reset indent menu option
